platform/andromeda/web/deployment-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
        - name: web
          image: gcr.io/igiari/andromeda-web:v0.2.0-alpha
