platform/andromeda/web/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: andromeda-web
spec:
  rules:
    - host: andromeda.igiari.net
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 8080
            path: /
